[package]
name = "contract_Analysis_Platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ethers lib use to  connect ethereum network and sync block or read contart data.
ethers = "2.0"

# actix-web lib is web framework, can qultly response http request.
actix-web = "4"


tokio = { version = "1", features = ["full"] }
actix-multipart-extract = "0.1.5"
serde = "1.0.193"
